---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ???
  Changes:
    - Auto-zoom will now use zooms higher than x1 if the screenshot would end up very small.
    - Default JPG quality setting is now 90 (previously 80).

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-10-14
  Features:
    - Initial release