@@ -10,13 +10,13 @@ sas-jpg-quality=JPEG quality
 sas-alt-mode=Show Alt-mode
 sas-daytime=Daytime
 sas-anti-alias=Anti-alias
-sas-autozoom-max-px=Auto-zoom max screenshot size (px)
+sas-autozoom-target-px=Auto-zoom target screenshot size (px)
 
 [mod-setting-description]
 sas-filetype=JPEG has smaller files, PNG is higher quality.
 sas-jpg-quality=The JPEG render quality as a percentage (from 0% to 100%). A lower value means a more compressed image. Doesn't do anything if you select PNG.
 sas-anti-alias=Render in double resolution and downscale the result. Makes things look less pixelated while keeping the resolution and filesize of the final screenshot the same. However the maximum resolution allowed is lowered to 8192x8192 instead of 16384x16384.
-sas-autozoom-max-px=When using auto-zoom, if a screenshot were to become wider or taller than this value (in pixels), it will instead zoom-out to keep the screenshot smaller.
+sas-autozoom-target-px=Auto-zoom will try to get a screenshot as close as possible to this size.
 
 [string-mod-setting]
 sas-daytime-daytime=Always daytime
